overflow issue

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ a {
 
 .images {
     width: 44%;
+    overflow: hidden;
 }
 
 .image {
@@ -55,6 +56,7 @@ a {
     width: 3%;
     background-color: #a00f0f59;
     /* background-color: #da715f; */
+    overflow: hidden;
 }
 
 .main-content {
